test/typecheck/fail/duplicate_type_id.sail
union foo1 = { Bar1 : unit }

union foo1 = { Bar2 : unit }